--- a/ContestAi/ContestAdmin/templates/base/base.html
+++ b/ContestAi/ContestAdmin/templates/base/base.html
@@ -53,7 +53,7 @@
               <a class="nav-link" href='../../../admin'>ADMIN</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href={% url 'index' %}>MANAGE</a>
+              <a class="nav-link" href="{% url 'index' %}">MANAGE</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'holder' %}">HOLDER</a>
