--- a/ContestAi/templates/base.html
+++ b/ContestAi/templates/base.html
@@ -59,7 +59,7 @@
               <a class="nav-link" href="../../../admin">ADMIN</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href={% url 'listAccount' %}>MANAGE</a>
+              <a class="nav-link" href="{% url 'listAccount' %}">MANAGE</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'holder' %}">HOLDER</a>
